--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,9 @@ log4j-api = { group = "org.apache.logging.log4j", name = "log4j-api", version.re
 log4j-core = { group = "org.apache.logging.log4j", name = "log4j-core", version.ref = "log4j-version" }
 log4j-slf4j-impl = { group = "org.apache.logging.log4j", name = "log4j-slf4j-impl", version.ref = "log4j-version" }
 
+[bundles]
+log4j = ["log4j-api", "log4j-core", "log4j-slf4j-impl"]
+
 [plugins]
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "plugin-kotlin-version" }
 javafx = { id = "org.openjfx.javafxplugin", version.ref = "plugin-javafx-version" }
