--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,12 +4,17 @@ jvm-target = "21"
 javafx-version = "22"
 
 kotlinx-coroutines-core-version = "1.8.0"
+kotlinx-dataframe-version = "0.13.1"
 
 slf4j2-version = "2.0.12"
 log4j-version = "2.23.0"
 logback-version = "1.5.3"
 
 materialfx-version = "11.17.0"
+lets-plot-jfx-version = "4.3.2"
+lets-plot-kotlin-jvm-version = "4.7.2"
+lets-plot-kotlin-geotools-version = "4.7.2"
+geotools-version = "30.1"
 
 plugin-kotlin-jvm-version = "1.9.23"
 plugin-beryx-jlink-version = "3.0.1"
@@ -24,9 +29,18 @@ kotlin-test-junit5 = { group = "org.jetbrains.kotlin", name = "kotlin-test-junit
 
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core-version" }
 kotlinx-coroutines-javafx = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-javafx", version.ref = "kotlinx-coroutines-core-version" }
+kotlinx-dataframe = { group = "org.jetbrains.kotlinx", name = "dataframe", version.ref = "kotlinx-dataframe-version" }
 
-# javafx
+# javafx ui
 materialfx = { group = "io.github.palexdev", name = "materialfx", version.ref = "materialfx-version" }
+
+# Lets-Plot
+lets-plot-jfx = { group = "org.jetbrains.lets-plot", name = "lets-plot-jfx", version.ref = "lets-plot-jfx-version" }
+lets-plot-kotlin-jvm = { group = "org.jetbrains.lets-plot", name = "lets-plot-kotlin-jvm", version.ref = "lets-plot-kotlin-jvm-version" }
+lets-plot-kotlin-geotools = { group = "org.jetbrains.lets-plot", name = "lets-plot-kotlin-geotools", version.ref = "lets-plot-kotlin-geotools-version" }
+gt-shapefile = { group = "org.geotools", name = "gt-shapefile", version.ref = "geotools-version" }
+gt-geojson = { group = "org.geotools", name = "gt-geojson", version.ref = "geotools-version" }
+gt-cql = { group = "org.geotools", name = "gt-cql", version.ref = "geotools-version" }
 
 # log
 slf4j2-api = { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4j2-version" }
@@ -40,7 +54,8 @@ logback-core = { group = "ch.qos.logback", name = "logback-core", version.ref = 
 
 [bundles]
 log4j = ["log4j-api", "log4j-core", "log4j-slf4j2-impl"]
-logback = ["log4j-api", "logback-classic", "logback-core"]
+logback = ["logback-classic", "logback-core"]
+lets-plot = ["lets-plot-jfx", "lets-plot-kotlin-jvm", "lets-plot-kotlin-geotools", "gt-shapefile", "gt-geojson", "gt-cql"]
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "plugin-kotlin-jvm-version" }
