--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ materialfx-version = "11.17.0"
 lets-plot-version = "4.3.2"
 lets-plot-kotlin-version = "4.7.2"
 geotools-version = "30.1"
+okhttp-version = "4.12.0"
+gson-version = "2.10.1"
 
 plugin-kotlin-jvm-version = "1.9.23"
 plugin-beryx-jlink-version = "3.0.1"
@@ -29,6 +31,7 @@ kotlin-test-junit5 = { group = "org.jetbrains.kotlin", name = "kotlin-test-junit
 
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core-version" }
 kotlinx-coroutines-javafx = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-javafx", version.ref = "kotlinx-coroutines-core-version" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinx-coroutines-core-version" }
 kotlinx-dataframe = { group = "org.jetbrains.kotlinx", name = "dataframe", version.ref = "kotlinx-dataframe-version" }
 kotlinx-datetime-jvm = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime-jvm", version.ref = "kotlinx-datetime-jvm-version" }
 
@@ -42,6 +45,10 @@ lets-plot-kotlin-geotools = { group = "org.jetbrains.lets-plot", name = "lets-pl
 gt-shapefile = { group = "org.geotools", name = "gt-shapefile", version.ref = "geotools-version" }
 gt-geojson = { group = "org.geotools", name = "gt-geojson", version.ref = "geotools-version" }
 gt-cql = { group = "org.geotools", name = "gt-cql", version.ref = "geotools-version" }
+
+# http json
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp-version" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson-version" }
 
 # log
 slf4j2-api = { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4j2-version" }
@@ -57,6 +64,7 @@ logback-core = { group = "ch.qos.logback", name = "logback-core", version.ref = 
 log4j = ["log4j-api", "log4j-core", "log4j-slf4j2-impl"]
 logback = ["logback-classic", "logback-core"]
 lets-plot = ["lets-plot-jfx", "lets-plot-kotlin-jvm", "lets-plot-kotlin-geotools", "gt-shapefile", "gt-geojson", "gt-cql"]
+okhttp = ["okhttp", "gson"]
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "plugin-kotlin-jvm-version" }
