--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,8 @@ okhttp-version = "4.12.0"
 gson-version = "2.10.1"
 
 plugin-kotlin-jvm-version = "1.9.23"
-plugin-beryx-jlink-version = "3.0.1"
+plugin-beryx-jlink-version = "3.1.0"
+plugin-beryx-runtime-version = "1.13.1"
 
 [libraries]
 # bom
@@ -69,3 +70,4 @@ okhttp = ["okhttp", "gson"]
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "plugin-kotlin-jvm-version" }
 beryx-jlink = { id = "org.beryx.jlink", version.ref = "plugin-beryx-jlink-version" }
+beryx-runtime = { id = "org.beryx.runtime", version.ref = "plugin-beryx-runtime-version" }
