--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,9 +3,10 @@ project-version = "0.0.2-SNAPSHOT"
 jvm-target = "21"
 javafx-version = "22"
 
-kotlinx-coroutines-core-version = "1.8.0"
-kotlinx-dataframe-version = "0.13.1"
-kotlinx-datetime-jvm-version = "0.5.0"
+kotlinx-coroutines-core-version = "1.9.0"
+kotlinx-dataframe-version = "0.14.1"
+kotlinx-datetime-jvm-version = "0.6.1"
+kotlinx-serialization-json-version = "1.7.3"
 
 slf4j2-version = "2.0.12"
 log4j-version = "2.23.0"
@@ -18,7 +19,7 @@ geotools-version = "30.1"
 okhttp-version = "4.12.0"
 gson-version = "2.10.1"
 
-plugin-kotlin-jvm-version = "1.9.23"
+plugin-kotlin-jvm-version = "2.1.0"
 plugin-beryx-jlink-version = "3.1.0"
 plugin-beryx-runtime-version = "1.13.1"
 
@@ -69,5 +70,6 @@ okhttp = ["okhttp", "gson"]
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "plugin-kotlin-jvm-version" }
+kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "plugin-kotlin-jvm-version" }
 beryx-jlink = { id = "org.beryx.jlink", version.ref = "plugin-beryx-jlink-version" }
 beryx-runtime = { id = "org.beryx.runtime", version.ref = "plugin-beryx-runtime-version" }
